Fix Overflow

--- a/frontend/src/components/TaskCreator/Picker.css
+++ b/frontend/src/components/TaskCreator/Picker.css
@@ -42,6 +42,7 @@
 
   text-overflow: ellipsis;
   overflow:hidden;
+  white-space: nowrap;
   
   /* Any narrower and some long class tags will begin to be truncated. */
   max-width: 110px;
